PR c++/78890 	* class.c (check_field_decls): Diagnose REFERENCE_TYPE fields in 	unions even for C++11 and later.
	* g++.dg/init/ref14.C: Expect error even in C++11 and later.
	* g++.dg/init/union1.C: Likewise.
	* g++.dg/cpp0x/union6.C: Expect errors.
	* g++.dg/cpp0x/union8.C: New test.
	* g++.dg/cpp0x/pr78890-1.C: New test.
	* g++.dg/cpp0x/pr78890-2.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244112 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/78890
+	* class.c (check_field_decls): Diagnose REFERENCE_TYPE fields in
+	unions even for C++11 and later.
+
 2017-01-05  Nathan Sidwell  <nathan@acm.org>
 
 	PR c++/78765
