* doc/invoke.texi (C Dialect Options): Document it. c-family/         * c.opt (fsso-struct): Add 'native' value.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244115 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-05  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* doc/invoke.texi (C Dialect Options): Document it.
+
 2017-01-05  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/71016
