PR tree-optimization/78910 - Wrong print-return-value for a negative number
gcc/ChangeLog:

	PR tree-optimization/78910
	* gimple-ssa-sprintf.c (tree_digits): Add an argument.
	(format_integer): Correct off-by-one error in the handling
	of precision with negative numbers in signed conversions..

gcc/testsuite/ChangeLog:

	PR tree-optimization/78910
	* gcc.dg/tree-ssa/builtin-sprintf-warn-7.c: Adjust text of expected
	diagnostics.
	* gcc.dg/tree-ssa/builtin-sprintf.c: Add test cases.
	* gcc.dg/tree-ssa/pr78910.c: New test.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244116 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-05  Martin Sebor  <msebor@redhat.com>
+
+	PR tree-optimization/78910
+	* gimple-ssa-sprintf.c (tree_digits): Add an argument.
+	(format_integer): Correct off-by-one error in the handling
+	of precision with negative numbers in signed conversions..
+
 2017-01-05  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* doc/invoke.texi (C Dialect Options): Document it.
