[bootstrap-O1] change value type to avoid sprintf buffer size warning
In stage2 of bootstrap-O1, the code that warns if sprintf might
overflow its output buffer cannot tell that an unsigned value narrowed
to 16 bits will fit in 4 bytes with %4x.

Converting the value to 'unsigned short' makes it obvious that it
fits, at least on machines with 16-bit shorts.

for  gcc/c-family/ChangeLog

	* c-pretty-print.c (pp_c_tree_decl_identifier): Convert 16-bit
	value to unsigned short to fit in 4 hex digits without
	warnings.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244121 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-06  Alexandre Oliva <aoliva@redhat.com>
+
+	* c-pretty-print.c (pp_c_tree_decl_identifier): Convert 16-bit
+	value to unsigned short to fit in 4 hex digits without
+	warnings.
+
 2017-01-05  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* c.opt (fsso-struct): Add 'native' value.
