--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,26 @@
+2017-01-06  Justin Squirek  <squirek@adacore.com>
+
+	* sem_attr.adb (Analyze_Attribute): Modify semantic checks for
+	Finalization_Size to allow a prefix of any non-class-wide type.
+	* sem_attr.ads Modify comment for Finalization_Size to include
+	definite type use case.
+
+2017-01-06  Ed Schonberg  <schonberg@adacore.com>
+
+	* einfo.ads, einfo.adb (Is_Entry_Wrapper): New flag, defined
+	on procedures that are wrappers created for entries that have
+	preconditions.
+	* sem_ch6.adb (Analyze_Subrogram_Body_Helper): If the subprogram
+	body is an entry_wrapper, compile it in the context of the
+	synchronized type, because a precondition may refer to funtions
+	of the type.
+	* exp_ch9.adb (Build_Contract_Wrapper): Set Is_Entry_Wrapper on
+	body entity.
+	* exp_ch6.adb (Expand_Protected_Subprogram_Call): if the call is
+	within an Entry_Wrapper this is an external call whose target
+	is the synchronized object that is the actual in the call to
+	the wrapper.
+
 2017-01-06  Yannick Moy  <moy@adacore.com>
 
 	* sem_attr.adb (Analyze_Attribute/Attribute_Loop_Entry): Analyze node
