--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-06  Hristian Kirtchev  <kirtchev@adacore.com>
+
+	* exp_ch9.adb: Minor reformatting.
+
 2017-01-06  Tristan Gingold  <gingold@adacore.com>
 
 	* exp_ch9.ads, exp_ch9.adb (Build_Entry_Names): Remove (unused).
